Added libraries to Executables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,12 @@ FIND_PACKAGE(Curses)
 IF (CURSES_FOUND)
     TARGET_INCLUDE_DIRECTORIES(Editogia.App PRIVATE ${CURSES_INCLUDE_DIRS})
     TARGET_LINK_LIBRARIES(Editogia.App PRIVATE ${CURSES_LIBRARIES})
+
+    TARGET_INCLUDE_DIRECTORIES(Editogia.Cusstest PRIVATE ${CURSES_INCLUDE_DIRS})
+    TARGET_LINK_LIBRARIES(Editogia.Cusstest PRIVATE ${CURSES_LIBRARIES})
+
+    TARGET_INCLUDE_DIRECTORIES(Editogia.Cussed PRIVATE ${CURSES_INCLUDE_DIRS})
+    TARGET_LINK_LIBRARIES(Editogia.Cussed PRIVATE ${CURSES_LIBRARIES})
 ELSE()
     MESSAGE(FATAL_ERROR "Not support to NCurses")
 ENDIF()
