--- a/Source/App/Cuss/CMakeLists.txt
+++ b/Source/App/Cuss/CMakeLists.txt
@@ -1,7 +1,9 @@
 ADD_EXECUTABLE(Editogia.Cussed cuss_editor.cpp)
 SET_TARGET_PROPERTIES(Editogia.Cussed PROPERTIES CXX_STANDARD 17)
 TARGET_LINK_LIBRARIES(Editogia.Cussed PRIVATE Editogia.Common)
+TARGET_INCLUDE_DIRECTORIES(Editogia.Cussed PRIVATE $<BUILD_INTERFACE:${EDITOGIA_ROOT_DIR}/Include/>)
 
 ADD_EXECUTABLE(Editogia.Cusstest cusstest.cpp)
 SET_TARGET_PROPERTIES(Editogia.Cusstest PROPERTIES CXX_STANDARD 17)
 TARGET_LINK_LIBRARIES(Editogia.Cusstest PRIVATE Editogia.Common)
+TARGET_INCLUDE_DIRECTORIES(Editogia.Cusstest PRIVATE $<BUILD_INTERFACE:${EDITOGIA_ROOT_DIR}/Include/>)
