--- a/Source/Common/CMakeLists.txt
+++ b/Source/Common/CMakeLists.txt
@@ -7,3 +7,4 @@ ADD_LIBRARY(Editogia.Common
         window.cpp
         )
 SET_TARGET_PROPERTIES(Editogia.Common PROPERTIES CXX_STANDARD 17)
+TARGET_INCLUDE_DIRECTORIES(Editogia.Common PUBLIC $<BUILD_INTERFACE:${EDITOGIA_ROOT_DIR}/Include/>)
