--- a/Source/Editogia/CMakeLists.txt
+++ b/Source/Editogia/CMakeLists.txt
@@ -39,3 +39,4 @@ ADD_EXECUTABLE(Editogia.App
         )
 SET_TARGET_PROPERTIES(Editogia.App PROPERTIES CXX_STANDARD 17)
 TARGET_LINK_LIBRARIES(Editogia.App PRIVATE Editogia.Common)
+TARGET_INCLUDE_DIRECTORIES(Editogia.App PRIVATE $<BUILD_INTERFACE:${EDITOGIA_ROOT_DIR}/Include/>)
