Added Junos for serialize JSON

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,16 @@ PROJECT(Editogia)
 # Used for find resources from the root path of project
 SET(EDITOGIA_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
+INCLUDE(CMakeModules/CPM.cmake)
+
+CPMAddPackage("gh:Andres6936/Junos@6.17.3")
+
 ADD_SUBDIRECTORY(Source/Common)
 ADD_SUBDIRECTORY(Source/App/Cuss)
 ADD_SUBDIRECTORY(Source/Editogia)
 
 FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/notes DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
 FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/cuss DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
-FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/save DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
 
 FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/art.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
 FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/motd.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
