--- a/Source/Editogia/CMakeLists.txt
+++ b/Source/Editogia/CMakeLists.txt
@@ -40,6 +40,7 @@ ADD_EXECUTABLE(Editogia.App
         )
 SET_TARGET_PROPERTIES(Editogia.App PROPERTIES CXX_STANDARD 17)
 TARGET_LINK_LIBRARIES(Editogia.App PRIVATE Editogia.Common)
+TARGET_LINK_LIBRARIES(Editogia.App PRIVATE Levin::Framework)
 TARGET_LINK_LIBRARIES(Editogia.App PRIVATE ArduinoJson)
 TARGET_INCLUDE_DIRECTORIES(Editogia.App PRIVATE $<BUILD_INTERFACE:${EDITOGIA_ROOT_DIR}/Include/>)
 
