--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ INCLUDE(CMakeModules/CPM.cmake)
 
 CPMAddPackage("gh:Andres6936/Junos@6.17.3")
 CPMAddPackage("gh:Andres6936/Levin@2021.0523")
+CPMAddPackage("gh:onqtam/doctest#2.4.6")
 
 ADD_SUBDIRECTORY(Source/Common)
 ADD_SUBDIRECTORY(Source/App/Cuss)
