Added support to test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,3 +42,7 @@ IF (CURSES_FOUND)
 ELSE()
     MESSAGE(FATAL_ERROR "Not support to NCurses")
 ENDIF()
+
+ENABLE_TESTING()
+
+ADD_SUBDIRECTORY(Test/)
