--- a/Source/Editogia/CMakeLists.txt
+++ b/Source/Editogia/CMakeLists.txt
@@ -43,7 +43,7 @@ SET_TARGET_PROPERTIES(Editogia.Lib PROPERTIES CXX_STANDARD 17)
 TARGET_LINK_LIBRARIES(Editogia.Lib PRIVATE Editogia.Common)
 TARGET_LINK_LIBRARIES(Editogia.Lib PRIVATE Levin::Framework)
 TARGET_LINK_LIBRARIES(Editogia.Lib PRIVATE ArduinoJson)
-TARGET_INCLUDE_DIRECTORIES(Editogia.Lib PRIVATE $<BUILD_INTERFACE:${EDITOGIA_ROOT_DIR}/Include/>)
+TARGET_INCLUDE_DIRECTORIES(Editogia.Lib PUBLIC $<BUILD_INTERFACE:${EDITOGIA_ROOT_DIR}/Include/>)
 
 ADD_EXECUTABLE(Editogia.App main.cpp)
 SET_TARGET_PROPERTIES(Editogia.App PROPERTIES CXX_STANDARD 17)
