--- a/Source/Cuss/CMakeLists.txt
+++ b/Source/Cuss/CMakeLists.txt
@@ -12,5 +12,5 @@ ADD_LIBRARY(Editogia.Cuss
         Binding.cpp
         Interface.cpp
         )
-SET_TARGET_PROPERTIES(Editogia.Lib PROPERTIES CXX_STANDARD 17)
-TARGET_INCLUDE_DIRECTORIES(Editogia.Lib PUBLIC $<BUILD_INTERFACE:${EDITOGIA_ROOT_DIR}/Include/>)
+SET_TARGET_PROPERTIES(Editogia.Cuss PROPERTIES CXX_STANDARD 17)
+TARGET_INCLUDE_DIRECTORIES(Editogia.Cuss PUBLIC $<BUILD_INTERFACE:${EDITOGIA_ROOT_DIR}/Include/>)
