Link of library Cuss

--- a/Source/Cuss/CMakeLists.txt
+++ b/Source/Cuss/CMakeLists.txt
@@ -13,4 +13,5 @@ ADD_LIBRARY(Editogia.Cuss
         Interface.cpp
         )
 SET_TARGET_PROPERTIES(Editogia.Cuss PROPERTIES CXX_STANDARD 17)
+TARGET_LINK_LIBRARIES(Editogia.Cuss PRIVATE Editogia.Common)
 TARGET_INCLUDE_DIRECTORIES(Editogia.Cuss PUBLIC $<BUILD_INTERFACE:${EDITOGIA_ROOT_DIR}/Include/>)
