--- a/Source/Editogia/CMakeLists.txt
+++ b/Source/Editogia/CMakeLists.txt
@@ -41,6 +41,7 @@ ADD_LIBRARY(Editogia.Lib
         )
 SET_TARGET_PROPERTIES(Editogia.Lib PROPERTIES CXX_STANDARD 17)
 TARGET_LINK_LIBRARIES(Editogia.Lib PRIVATE Editogia.Common)
+TARGET_LINK_LIBRARIES(Editogia.Lib PRIVATE Editogia.Cuss)
 TARGET_LINK_LIBRARIES(Editogia.Lib PRIVATE Levin::Framework)
 TARGET_LINK_LIBRARIES(Editogia.Lib PRIVATE ArduinoJson)
 TARGET_INCLUDE_DIRECTORIES(Editogia.Lib PUBLIC $<BUILD_INTERFACE:${EDITOGIA_ROOT_DIR}/Include/>)
