--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ CPMAddPackage("gh:onqtam/doctest#2.4.6")
 
 ADD_SUBDIRECTORY(Source/Common)
 ADD_SUBDIRECTORY(Source/Cuss)
-ADD_SUBDIRECTORY(Source/App/Cuss)
+ADD_SUBDIRECTORY(Source/App/Editor)
 ADD_SUBDIRECTORY(Source/Editogia)
 
 FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/notes DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
