Renamed and moved class Glyph

--- a/Source/Common/CMakeLists.txt
+++ b/Source/Common/CMakeLists.txt
@@ -1,7 +1,7 @@
 ADD_LIBRARY(Editogia.Common
+        View/Glyph.cpp
         color.cpp
         files.cpp
-        glyph.cpp
         stringfunc.cpp
         window.cpp
         )
