Moved dependencies to Common

--- a/Source/Common/CMakeLists.txt
+++ b/Source/Common/CMakeLists.txt
@@ -1,5 +1,7 @@
 ADD_LIBRARY(Editogia.Common
         Backend/Curses/Curses.cpp
+        IO/User/Key.cpp
+        IO/User/keys.cpp
         View/Glyph.cpp
         View/TextColor.cpp
         color.cpp
